--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
 Build-Depends: debhelper (>=9),
-               dh-python,
+               dh-python3,
                python3-setuptools,
                python3 | python3-all | python3-dev | python3-all-dev
 Standards-Version: 3.9.7
