--- a/debian/control
+++ b/debian/control
@@ -3,15 +3,16 @@ Section: python
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
 Build-Depends: debhelper (>=9),
-               dh-python3,
+               dh-python,
                python3-setuptools,
-               python3 | python3-all | python3-dev | python3-all-dev
+               python3-all
 Standards-Version: 3.9.7
 Homepage: http://lliurex.net
 Vcs-Browser: https://github.com/lliurex/poinstaller.git
+X-Python3-Version: >= 3.2
 
-Package: python-poinstaller
-Architecture: any
+Package: python3-poinstaller
+Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python-polib, python3
 Description: Utility for convert po to mo and install
  Python library to transform po files into mo, and install this files into
